git-annex (7.20200205) UNRELEASED; urgency=medium

  * When git-annex is built with a ssh that does not support ssh connection
    caching, default annex.sshcaching to false, but let the user override it.
  * Improve warning messages further when ssh connection caching cannot
    be used, to clearly state why.

 -- Joey Hess <id@joeyh.name>  Fri, 14 Feb 2020 14:12:25 -0400

git-annex (7.20200204) upstream; urgency=medium

  * Fix build with persistent-template 2.8.0.
  * Makefile: Really move the fish completion to the
    vendor_completions.d directory.

 -- Joey Hess <id@joeyh.name>  Tue, 04 Feb 2020 14:30:55 -0400

git-annex (7.20200202.7) upstream; urgency=medium

  * add: --force-annex/--force-git options make it easier to override
    annex.largefiles configuration (and potentially safer as it avoids
    bugs like the smudge bug fixed in the last release).
  * reinject --known: Fix bug that prevented it from working in a bare repo.
  * Support being used in a git repository that uses sha256 rather than sha1.
  * initremote, enableremote: Be stricter about rejecting invalid
    configuration parameters for remotes, particularly things like foo=true
    when foo=yes is expected.
  * initremote, enableremote: Reject unknown configuration parameters
    provided to these commands.
  * initremote: Added --whatelse option, to show additional
    configuration parameters you might want to set. Eg:
    git annex initremote type=directory encryption=none --whatelse
  * Added LISTCONFIGS to external special remote protocol. Special remote
    programs that use GETCONFIG/SETCONFIG are recommended to implement it.
  * init: Avoid an ugly error message when http remote has no git-annex
    uuid configured.
  * Support git remotes that need http basic auth to be accessed,
    using git credential to get the password.
  * Display a warning when concurrency is enabled but ssh connection caching
    is not enabled or won't work due to a crippled filesystem.